# rusty-sway-status

./: Cargo.toml  README.md
src/: main.rs
