[package]
name = "status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
strip = true

[features]
battery-status = []

[dependencies]
chrono = "0.4.26"
chrono-tz = "0.8.5"
sysctl = "=0.4.1"
